@@ -200,8 +200,11 @@ selectFeatures.tokenizedTexts <- function(x, features, selection = c("keep", "re
             result <- lapply(x, function(x) x[which((x %in% features))])
     } else if (valuetype == "regex") {
         if (selection == "remove") {
-            result <- lapply(x, function(y) y[-which(stringi::stri_detect_regex(y, rep(paste0(features, collapse = "|"), length(y)), 
-                                                                                case_insensitive = case_insensitive, ...))])
+            result <- lapply(x, function(y) {
+                removeIndex <- which(stringi::stri_detect_regex(y, rep(paste0(features, collapse = "|"), length(y)), 
+                                                                case_insensitive = case_insensitive, ...))
+                if (length(removeIndex)) y[-removeIndex] else y
+            })
         } else {
             result <- lapply(x, function(y) y[which(stringi::stri_detect_regex(y, rep(paste0(features, collapse = "|"), length(y)), 
                                                                                case_insensitive = case_insensitive, ...))])
